--- a/prowlarr.yml
+++ b/prowlarr.yml
@@ -1,92 +1,15 @@
-services:
+version: "3.8"
 
-    prowlarr:
-  
-      cap_drop:
-        - "AUDIT_CONTROL"
-        - "BLOCK_SUSPEND"
-        - "DAC_READ_SEARCH"
-        - "IPC_LOCK"
-        - "IPC_OWNER"
-        - "LEASE"
-        - "LINUX_IMMUTABLE"
-        - "MAC_ADMIN"
-        - "MAC_OVERRIDE"
-        - "NET_ADMIN"
-        - "NET_BROADCAST"
-        - "SYSLOG"
-        - "SYS_ADMIN"
-        - "SYS_BOOT"
-        - "SYS_MODULE"
-        - "SYS_NICE"
-        - "SYS_PACCT"
-        - "SYS_PTRACE"
-        - "SYS_RAWIO"
-        - "SYS_RESOURCE"
-        - "SYS_TIME"
-        - "SYS_TTY_CONFIG"
-        - "WAKE_ALARM"
-  
-      container_name: "prowlarr"
-  
-      entrypoint:
-        - "/init"
-  
-      environment:
-        - "PUID=1000"
-        - "PGID=1000"
-        - "PATH=/lsiopy/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
-        - "PS1=$(whoami)@$(hostname):$(pwd)\\$ "
-        - "HOME=/root"
-        - "TERM=xterm"
-        - "S6_CMD_WAIT_FOR_SERVICES_MAXTIME=0"
-        - "S6_VERBOSITY=1"
-        - "S6_STAGE2_HOOK=/docker-mods"
-        - "VIRTUAL_ENV=/lsiopy"
-        - "LSIO_FIRST_PARTY=true"
-        - "XDG_CONFIG_HOME=/config/xdg"
-  
-      hostname: "bb34c4061b76"
-  
-      image: "linuxserver/prowlarr:develop"
-  
-      ipc: "private"
-  
-      labels:
-        build_version: "Linuxserver.io version:- 1.3.1.2796-ls94 Build-date:- 2023-03-03T16:57:57+01:00"
-        maintainer: "Roxedus,thespad"
-        org.opencontainers.image.authors: "linuxserver.io"
-        org.opencontainers.image.created: "2023-03-03T16:57:57+01:00"
-        org.opencontainers.image.description: "[Prowlarr](https://github.com/Prowlarr/Prowlarr)\
-          \ is a indexer manager/proxy built on the popular arr .net/reactjs base stack\
-          \ to integrate with your various PVR apps. Prowlarr supports both Torrent\
-          \ Trackers and Usenet Indexers. It integrates seamlessly with Sonarr, Radarr,\
-          \ Lidarr, and Readarr offering complete management of your indexers with no\
-          \ per app Indexer setup required (we do it all).  "
-        org.opencontainers.image.documentation: "https://docs.linuxserver.io/images/docker-prowlarr"
-        org.opencontainers.image.licenses: "GPL-3.0-only"
-        org.opencontainers.image.ref.name: "d95213ac2985ffa5a4c85606bbfbf63c305d39e7"
-        org.opencontainers.image.revision: "d95213ac2985ffa5a4c85606bbfbf63c305d39e7"
-        org.opencontainers.image.source: "https://github.com/linuxserver/docker-prowlarr"
-        org.opencontainers.image.title: "Prowlarr"
-        org.opencontainers.image.url: "https://github.com/linuxserver/docker-prowlarr/packages"
-        org.opencontainers.image.vendor: "linuxserver.io"
-        org.opencontainers.image.version: "1.3.1.2796-ls94"
-  
-      logging:
-        driver: "journald"
-        options: {}
-  
-      mac_address: "02:42:ac:11:00:06"
-  
-      network_mode: "bridge"
-  
-      ports:
-        - "9696:9696/tcp"
-  
-      restart: "always"
-  
-      volumes:
-        - "prowlarr_data:/config"
-  
-      working_dir: "/"
+services:
+  app:
+    container_name: uptime-kuma
+    hostname: uptime-kuma
+    image: louislam/uptime-kuma
+    restart: always
+    ports:
+      - 3001:3001
+    dns:
+      - 1.1.1.1 # Change to Pihole DNS
+      - 8.8.8.8
+    volumes:
+      - ${DOCKER_VOLUME_STORAGE:-/mnt/docker-volumes}/uptimekuma:/app/data
