--- a/mealie.yml
+++ b/mealie.yml
@@ -1,24 +1,37 @@
-version: "3"
+version: "3.7"
 
 services:
-  npm:
-    container_name: npm
+  mealie-frontend:
+    image: hkotel/mealie:frontend-v1.0.0beta-5
+    container_name: mealie-frontend
+    hostname: mealie-frontend
+    depends_on:
+      - mealie-api
     environment:
-      - TZ=America/New_York
-    hostname: npm
-    user: 0:1000
-    #networks:
-    #  - npm_proxy
-    image: jc21/nginx-proxy-manager:latest
-    ports:
-      - 443:443/tcp # HTTPS
-      - 81:81/tcp # MGMT UI
-      - 80:80/tcp # HTTP
+    # Set Frontend ENV Variables Here
+      - API_URL=http://mealie-api:9000
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "/bin/check-health"]
-      interval: 30s
-      timeout: 3s
+    ports:
+      - "9925:3000" # adjust to your liking 
     volumes:
-      - ${DOCKER_VOLUME_STORAGE:-/mnt/docker-volumes}/nginx-proxy-manager/data:/data
-      - ${DOCKER_VOLUME_STORAGE:-/mnt/docker-volumes}/nginx-proxy-manager/letsencrypt:/etc/letsencrypt
+      - ${DOCKER_VOLUME_STORAGE:-/mnt/docker-volumes}/mealie/data:/app/data/   
+
+  mealie-api:
+    image: hkotel/mealie:api-v1.0.0beta-5
+    container_name: mealie-api
+    hostname: mealie-api
+    deploy:
+      resources:
+        limits:
+          memory: 512M # Setting a memory limit will improve idle performance.
+    volumes:
+      - ${DOCKER_VOLUME_STORAGE:-/mnt/docker-volumes}/mealie/data:/app/data/
+    environment:
+      - ALLOW_SIGNUP=true # disable after setting up your accounts!
+      - PUID=1000
+      - PGID=1000
+      - TZ=America/New_York
+      - MAX_WORKERS=1
+      - WEB_CONCURRENCY=1
+      - BASE_URL=https://mealie.example.com # adjust this!
+    restart: unless-stopped
