--- a/nginx-proxy-manager.yml
+++ b/nginx-proxy-manager.yml
@@ -1,21 +1,24 @@
 version: "3"
 
-# More info at https://github.com/pi-hole/docker-pi-hole/ and https://docs.pi-hole.net/
 services:
-  pihole:
-    container_name: pihole
-    image: pihole/pihole:latest
-    # For DHCP it is recommended to remove these ports and instead add: network_mode: "host"
-    ports:
-      - "53:53/tcp" # DNS TCP
-      - "53:53/udp" # DNS UDP
-      - "80:80/tcp" # WEB ADMIN GUI
-      #- "67:67/udp" # Only required if you are using Pi-hole as your DHCP server
+  npm:
+    container_name: npm
     environment:
-      TZ: 'America/New_York'
-      WEBPASSWORD: 'MySecureLoginPasswordForWebApp' # Change this
-    # Volumes store your data between container upgrades
-    volumes:
-      - ${DOCKER_VOLUME_STORAGE:-/mnt/docker-volumes}/pihole/data:/etc/pihole
-      - ${DOCKER_VOLUME_STORAGE:-/mnt/docker-volumes}/pihole/dnsmasq:/etc/dnsmasq.d
+      - TZ=America/New_York
+    hostname: npm
+    user: 0:1000
+    #networks:
+    #  - npm_proxy
+    image: jc21/nginx-proxy-manager:latest
+    ports:
+      - 443:443/tcp # HTTPS
+      - 81:81/tcp # MGMT UI
+      - 80:80/tcp # HTTP
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "/bin/check-health"]
+      interval: 30s
+      timeout: 3s
+    volumes:
+      - ${DOCKER_VOLUME_STORAGE:-/mnt/docker-volumes}/nginx-proxy-manager/data:/data
+      - ${DOCKER_VOLUME_STORAGE:-/mnt/docker-volumes}/nginx-proxy-manager/letsencrypt:/etc/letsencrypt
