--- a/uptime-kuma.yml
+++ b/uptime-kuma.yml
@@ -1,24 +1,15 @@
-version: "3.9"
+version: "3.8"
 
 services:
-  watchtower:
-    container_name: watchtower
-    hostname: watchtower
-    environment:
-      #- WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PORT=587
-      #- WATCHTOWER_NOTIFICATION_EMAIL_SERVER_USER=watchtower@example.com
-      #- WATCHTOWER_NOTIFICATION_EMAIL_SERVER_PASSWORD=MyStrongSmtpLoginPassword
-      #- WATCHTOWER_NOTIFICATION_EMAIL_FROM=watchtower@example.com
-      #- WATCHTOWER_NOTIFICATION_EMAIL_TO=john.doe@example.com
-      #- WATCHTOWER_NOTIFICATION_EMAIL_SERVER=smtp.google.com
-      #- WATCHTOWER_NOTIFICATIONS=email
-      - WATCHTOWER_CLEANUP=true # remove unused images afterwards
-    image: containrrr/watchtower:latest
-    labels:
-      com.centurylinklabs.watchtower: true
+  app:
+    container_name: uptime-kuma
+    hostname: uptime-kuma
+    image: louislam/uptime-kuma
     restart: always
-    network_mode: "host"
+    ports:
+      - 3001:3001
+    dns:
+      - 1.1.1.1 # Change to Pihole DNS
+      - 8.8.8.8
     volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-    working_dir: /
+      - ${DOCKER_VOLUME_STORAGE:-/mnt/docker-volumes}/uptimekuma:/app/data
