--- a/nginx-proxy-manager.yml
+++ b/nginx-proxy-manager.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   npm:
-    container_name: npm
+    container_name: nginx-proxy-manager
     environment:
       - TZ=America/New_York
     hostname: npm
