--- a/prowlarr.yml
+++ b/prowlarr.yml
@@ -10,6 +10,7 @@ services:
       - TZ=America/New_York
     volumes:
       - ${DOCKER_VOLUME_STORAGE:-/mnt/docker-volumes}/prowlarr/config:/config
+    network_mode: "bridge"
     ports:
       - 9696:9696
     restart: unless-stopped
